--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,18 @@
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-  compileSdkVersion 24
-  buildToolsVersion "24.0.1"
+  compileSdkVersion rootProject.ext.android.compileSdkVersion
+  buildToolsVersion rootProject.ext.android.buildToolsVersion
   defaultConfig {
-    applicationId "me.itxuye.gankdbinding"
-    minSdkVersion 15
-    targetSdkVersion 24
-    versionCode 1
-    versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    multiDexEnabled = true
+    applicationId rootProject.ext.android.applicationId
+    minSdkVersion rootProject.ext.android.minSdkVersion
+    targetSdkVersion rootProject.ext.android.targetSdkVersion
+    versionCode rootProject.ext.android.versionCode
+    versionName rootProject.ext.android.versionName
+    testInstrumentationRunner rootProject.ext.android.testInstrumentationRunner
+    multiDexEnabled = rootProject.ext.android.multiDexEnabled
   }
   buildTypes {
     release {
@@ -41,14 +42,12 @@ dependencies {
   androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
   androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
   //support
-  compile 'com.android.support:design:24.1.1'
-  compile 'com.android.support:cardview-v7:24.1.1'
-  compile 'com.android.support:recyclerview-v7:24.1.1'
-  compile 'com.android.support:multidex:1.0.1'
-//  compile 'com.android.support:appcompat-v7:24.1.1'
-  compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
-  //DBingding
-  //  compile 'com.github.tianzhijiexian:DBinding:1.0.0'
+  compile rootProject.ext.dependencies["desigh"]
+  compile rootProject.ext.dependencies["cardview-v7"]
+  compile rootProject.ext.dependencies["recyclerview-v7"]
+  compile rootProject.ext.dependencies["multidex"]
+  compile rootProject.ext.dependencies["support-fragment"]
+  compile rootProject.ext.dependencies["constraint-layout"]
   //eventbus
   compile 'org.greenrobot:eventbus:3.0.0'
   // 网络调试
@@ -67,10 +66,27 @@ dependencies {
     transitive = true
   }
   //load image
-  compile 'com.facebook.fresco:fresco:0.12.0'
+  compile 'com.github.bumptech.glide:glide:3.7.0'
+  compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+
   //log
+  compile 'com.jakewharton.timber:timber:4.1.2'
   compile 'com.github.tianzhijiexian:logger:1.1.8'
-  compile 'com.jakewharton.timber:timber:4.1.1'
+
+  //leakcanary
+  debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+  releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+  testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+
+  //dagger2
+  compile rootProject.ext.dependencies["dagger2Compile"]
+  apt rootProject.ext.dependencies["dagger2Apt"]
+//  compile 'org.glassfish:javax.annotation:10.0-b28'
+  provided 'javax.annotation:jsr250-api:1.0'
+
+  compile 'com.github.markzhai:databinding-rv-adapter:1.0.1'
+  compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
+
   compile project(':fragmentation_swipeback')
   compile project(':fragmentation')
 }
