--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "config.gradle"
 
 buildscript {
   repositories {
@@ -10,11 +11,9 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.0-beta2'
-    classpath 'io.realm:realm-gradle-plugin:1.0.0'
-
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
+    classpath 'com.android.tools.build:gradle:2.2.2'
+    classpath 'io.realm:realm-gradle-plugin:1.2.0'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
   }
 }
 
@@ -32,3 +31,4 @@ allprojects {
 task clean(type: Delete) {
   delete rootProject.buildDir
 }
+
